@@ -5,7 +5,7 @@
 // Modified by:
 // Created:     23.09.98
 // Copyright:   (c) 1998 Vadim Zeitlin <zeitlin@dptmaths.ens-cachan.fr>
-// Licence:     wxWindows licence (part of wxExtra library)
+// Licence:     wxWidgets licence (part of base library)
 /////////////////////////////////////////////////////////////////////////////
 
 #ifndef _MIMETYPE_IMPL_H
@@ -62,6 +62,20 @@ public:
     // this is called  by Associate
     bool SetDescription (const wxString& desc);
 
+    // This is called by all our own methods modifying the registry to let the
+    // Windows Shell know about the changes.
+    //
+    // It is also called from Associate() and Unassociate() which suppress the
+    // internally generated notifications using the method below, which is why
+    // it has to be public.
+    void MSWNotifyShell();
+
+    // Call before/after performing several registry changes in a row to
+    // temporarily suppress multiple notifications that would be generated for
+    // them and generate a single one at the end using MSWNotifyShell()
+    // explicitly.
+    void MSWSuppressNotifications(bool supress);
+
 private:
     // helper function: reads the command corresponding to the specified verb
     // from the registry (returns an empty string if not found)
@@ -76,6 +90,7 @@ private:
 
     wxString m_strFileType,         // may be empty
              m_ext;
+    bool m_suppressNotify;
 
     // these methods are not publicly accessible (as wxMimeTypesManager
     // doesn't know about them), and should only be called by Unassociate
